@@ -1,31 +1,26 @@
 package com.team4.project1.domain.order.dto;
 
 import com.team4.project1.domain.order.entity.Order;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 
-import java.util.Date;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
-@Setter
-@NoArgsConstructor
 @AllArgsConstructor
-@Builder
 public class OrderWithOrderItemsDto {
     private Long id;
-    private Date date;
+    private LocalDateTime date;
     private Long totalPrice;
-    private List<OrderItemDto> orderItems;
+    private List<OrderItemDto> orderedItems;
 
     public static OrderWithOrderItemsDto from(Order order) {
-        return OrderWithOrderItemsDto.builder()
-                .id(order.getId())
-                .date(order.getOrderDate())
-                .totalPrice(order.getTotalPrice())
-                .orderItems(order.getOrderItems().stream()
-                        .map(OrderItemDto::from)
-                        .collect(Collectors.toList()))
-                .build();
+        return new OrderWithOrderItemsDto(
+                order.getId(),
+                order.getDate(),
+                order.getTotalPrice(),
+                order.getOrderItems().stream().map(OrderItemDto::from).toList()
+        );
     }
 }
